[package]
name = "oidc_verify"
version = "0.1.0"
edition = "2021"
authors = ["gw31415 <gw31415@amas.dev>"]
description = "A simple-usage OIDC token verifier. It works without `authorization_endpoint` field, such as Firebase Auth."
license = "Apache-2.0"
repository = "https://github.com/gw31415/oidc_verify"
categories = ["authentication"]
keywords = ["oidc", "jwt", "verify", "authentication", "security", "firebase"]

[dependencies.jwt-simple]
version = "0.12.9"
features = ["pure-rust"]
default-features = false

[dependencies]
serde = "1.0.209"
serde_json = "1.0.127"
thiserror = "1.0.63"
ureq = { version = "2.10.1", features = ["json"] }
url = "2.5.2"
